Bug 493075 - Plasma shows unnecessary empty error notification when pasting content (e.g. image or text) to Folder View via desktop or widget is canceled
Summary: Plasma shows unnecessary empty error notification when pasting content (e.g. ...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Desktop icons & Folder View widget (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
: 500081 500410 502367 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-09-13 18:21 UTC by cwo
Modified: 2025-11-28 23:37 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.6.0
Sentry Crash Report:


Attachments
notification log showing empty error notification (79.63 KB, image/png)
2024-09-13 18:21 UTC, cwo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description cwo 2024-09-13 18:21:13 UTC
Created attachment 173632 [details]
notification log showing empty error notification

SUMMARY

When an image (not image file) is in the clipboard and pasted on the desktop, plasmashell correctly shows the dialog from KIO (pastedialog). When pressing "cancel" in this dialog, however, plasmashell plays an audio alert and displays an otherwise empty error notification. Notifying the user that they pressed cancel on a dialog is generally not necessary, and if it was, it should come with some text that explains what it is about.

Note that Dolphin shows the same dialog, but handles canceling the dialog gracefully, without displaying an error. So this seems to be a plasmashell issue, not frameworks-kio.

STEPS TO REPRODUCE
1. Take a screenshot with Spectacle.
2. Press the Copy button
3. Click the desktop and press Ctrl+V
4. In the dialog that opens, press Cancel.

OBSERVED RESULT

A sound plays and an empty error notification is displayed. (See screenshot from the notification log)

EXPECTED RESULT

No sound, no notification, just abort the pasting action.

SOFTWARE/OS VERSIONS
KDE Plasma Version: 6.1.90
KDE Frameworks Version: 6.7.0
Qt Version: 6.7.2

ADDITIONAL INFORMATION
Comment 1 Nate Graham 2024-09-17 21:22:38 UTC
Can reproduce. Not limited to just when using the desktop:// IOWorker; seems like a folder view issue? Indeed when pasting into a Folder View widget, I see the same thing.
Comment 2 Marco Martin 2025-01-24 16:09:23 UTC
I can confirm it still happens on today's master
Comment 3 Marco Martin 2025-01-24 16:09:57 UTC
(In reply to Nate Graham from comment #1)
> Can reproduce. Not limited to just when using the desktop:// IOWorker; seems
> like a folder view issue? Indeed when pasting into a Folder View widget, I
> see the same thing.

however i think the notification comes from kio, so might be a generic kio issue?
Comment 4 cwo 2025-01-24 16:29:13 UTC
(In reply to Marco Martin from comment #3)
> however i think the notification comes from kio, so might be a generic kio
> issue?

Dolphin shows the same dialog, but does not show the notification. So it seems to be something that Plasma/Folder View does that Dolphin does not. (Or, of course, something that Dolphin does to prevent the notification).
Comment 5 cwo 2025-02-17 02:04:31 UTC
*** Bug 500081 has been marked as a duplicate of this bug. ***
Comment 6 cwo 2025-02-19 19:28:15 UTC
*** Bug 500410 has been marked as a duplicate of this bug. ***
Comment 7 nilskemail+kde 2025-02-19 19:35:57 UTC
> Note that Dolphin shows the same dialog, but handles canceling the dialog gracefully, without displaying an error. So this seems to be a plasmashell issue, not frameworks-kio.

According to bug 438519 (comment #3) dolphin might do it's own thing and implement the dialog independently which is maybe why it does not appear there
Comment 8 cwo 2025-04-03 19:45:37 UTC
*** Bug 502367 has been marked as a duplicate of this bug. ***
Comment 9 Kai Uwe Broulik 2025-04-04 14:17:38 UTC
It seems PasteJob returns ERR_NO_CONTENT in all cases, be it user cancel or actually no mime data available. Probably needs to be improved to return ERR_USER_CANCELED when one of the dialog prompts get canceled by the user.
Comment 10 Nicolas Fella 2025-11-26 12:29:53 UTC
Git commit cf3f81f04cb24ba8cbab19de74a5fd71199558ea by Nicolas Fella.
Committed on 26/11/2025 at 12:19.
Pushed by nicolasfella into branch 'master'.

pastejob: Emit ERR_USER_CANCELED when closing paste filename prompt

When we ask the user to enter a filename and the user closes the dialog
consider the paste job to be cancelled.

Otherwise we would emit ERR_NO_CONTENT, which isn't quite right

M  +7    -7    src/widgets/paste.cpp
M  +11   -2    src/widgets/pastejob.cpp

https://invent.kde.org/frameworks/kio/-/commit/cf3f81f04cb24ba8cbab19de74a5fd71199558ea