pastejob: Emit ERR_USER_CANCELED when closing paste filename prompt

When we ask the user to enter a filename and the user closes the dialog
consider the paste job to be cancelled.

Otherwise we would emit ERR_NO_CONTENT, which isn't quite right

BUG: 493075